@@ -49,8 +49,8 @@ on how to use it.
 <p>
 <b>Download tslib</b>
 <p>
-tslib only provides source archives. The latest release is version <b>1.21</b>
-including libts library version 0.10.3, released on the <b>22nd of October 2019</b>.
+tslib only provides source archives. The latest release is version <b>1.22</b>
+including libts library version 0.10.4, released on the <b>1st of July 2020</b>.
 Get it from our <a href="https://github.com/libts/tslib/releases">release page</a>
 (<a href="https://gitlab.com/tslib/tslib/tags">mirror</a>).
 
